--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBVAivux5rjs1LQ0we82ntiAITmMJqkViM" />
+            android:value="" />
     </application>
 
 </manifest>
